' -*- mode: plantuml; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*-
'
' Copyright (C) 2026 Marco Craveiro <marco.craveiro@gmail.com>
'
' This program is free software; you can redistribute it and/or modify it under
' the terms of the GNU General Public License as published by the Free Software
' Foundation; either version 3 of the License, or (at your option) any later
' version.
'
' This program is distributed in the hope that it will be useful, but WITHOUT
' ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
' FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License along with
' this program; if not, write to the Free Software Foundation, Inc., 51 Franklin
' Street, Fifth Floor, Boston, MA 02110-1301, USA.
'
@startuml

title ores.shell.analytics Component

set namespaceSeparator ::

namespace ores #F2F2F2 {
    namespace shell #F2F2F2 {
        namespace app #F2F2F2 {
            namespace commands #F2F2F2 {
                class pricing_engine_type_commands {
                }
                class pricing_model_config_commands {
                }
                class pricing_model_product_commands {
                }
                class pricing_model_product_parameter_commands {
                }
            }
        }
    }
}

' --- manual: everything below this line is hand-authored; the script preserves it ---
' analytics_commands lives in ores.shell.application. It is the one
' hand-maintained call site that registers this part's units.
ores::shell::app::commands::analytics_commands ..> ores::shell::app::commands::pricing_engine_type_commands : registers
ores::shell::app::commands::analytics_commands ..> ores::shell::app::commands::pricing_model_config_commands : registers
ores::shell::app::commands::analytics_commands ..> ores::shell::app::commands::pricing_model_product_commands : registers
ores::shell::app::commands::analytics_commands ..> ores::shell::app::commands::pricing_model_product_parameter_commands : registers

ores.shell.api ..> ores.shell.analytics : parsed_args, command_feedback
ores.analytics.api ..> ores.shell.analytics : domain, messaging

' Local Variables:
' compile-command: "java -Djava.awt.headless=true -DPLANTUML_SECURITY_PROFILE=UNSECURE -DPLANTUML_LIMIT_SIZE=65535 -jar /usr/share/plantuml/plantuml.jar ores.shell.analytics.puml"
' End:
@enduml
